<resources>
    <string name="app_name">Pictionis</string>

    <!-- Signing-->
    <string name="txtFieldPassword">Entrez votre password</string>
    <string name="txtFieldMail">Entrez votre e-mail</string>
    <string name="btnForgetAccount">Mot de passe oublié ?</string>
    <string name="btnRegisterTitle">S\'enregister</string>
    <string name="infoMail">Veuillez renseigner une adresse mail</string>
    <string name="infosPwdEmpty">Veuillez renseigner une password</string>
    <string name="infosPwdTooSmall">Veuillez renseigner une password de 6 charactere minimun</string>
    <string name="connectionOK"><![CDATA["Connection Internet => "]]></string>
    <string name="connectionInternetNotOK">Non connecté à Internet</string>
    <string name="title_activity_login">Se connecter</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="error_invalid_email">Cette adresse est invalid</string>
    <string name="error_invalid_password">Ce mot de passe est trop court </string>
    <string name="error_incorrect_password">Mot de passe incorrect</string>
    <string name="error_field_required">Ce champs est requis</string>
    <string name="permission_rationale">"Permission requie"</string>
    <string name="btnlogin">Se connecter</string>
    <string name="btnAlreadyAccount">J\'ai déja un compte !</string>
    <string name="btnNotHaveAccount">Pas de compte ? Enregistrez vous !</string>
    <string name="dialog_reset_message">Pour recevoir les instructions de réinitialisation de votre mot de passe, indiquez votre e-mail.</string>
    <string name="dialog_reset_title">Mot de passe oublié ?</string>
    <string name="failToSendResetMail">Echec Lors de l\'envoi du mail !</string>
    <string name="loggout_btn">Se déconnecter</string>

    <!-- drawing -->
    <string name="start_new">Nouveau dessin</string>
    <string name="brush">Pinceau</string>
    <string name="erase">Effacer</string>
    <string name="save">Sauvegarder</string>
    <string name="paint">Peindre</string>
    <string name="drawing_view_title">Dessine moi un mouton</string>
    <string name="sml">Petit</string>
    <string name="med">Normal</string>
    <string name="lrg">Grand</string>

    <!-- Channel -->
    <string name="add_channel_btn">+ channel</string>
    <string name="add_channel_txtField">Nom d\'un channel</string>
    <string name="GameListViewTitle"></string>

    <!-- Game part-->
    <string name="title_activity_games_list">Partie disponible</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
