<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.theghouls.pictionis.Activity.RegisterActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ProgressBar
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerViewProgressBar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_pictionislogo"
        android:id="@+id/imageView" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtFieldMail"
            android:inputType="textEmailAddress"
            android:id="@+id/txtFieldMail" />

    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtFieldPassword"
                android:inputType="textPassword"
                android:id="@+id/txtFieldPassword"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/btnRegisterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:id="@+id/registerButton"
            style="@android:style/Widget.Button.Small"
            android:textColor="@color/colorPrimary"
            />

        <Button
            android:text="@string/btnForgetAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgetAccountButton"
            android:textStyle="normal|italic"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="@dimen/textSizebtnForget"
            android:textColor="@android:color/holo_green_dark"
            android:gravity="top|center_vertical|center_horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/btnAlreadyAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textSize="12sp"
                android:textColor="?android:attr/colorActivatedHighlight"
                android:id="@+id/gotoLogin"
                android:textAllCaps="false"
                android:textStyle="normal|bold"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_vertical|center_horizontal"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
